<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageButton
            android:id="@+id/idBtnSaudacao"
            android:layout_width="179dp"
            android:layout_height="205dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/descSaudacao"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/mao" />

        <ImageButton
            android:id="@+id/idBtnFamiliares"
            android:layout_width="wrap_content"
            android:layout_height="206dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desFamiliares"
            android:scaleType="fitCenter"
            app:layout_column="6"
            app:layout_row="0"
            app:srcCompat="@drawable/familiares" />

        <ImageButton
            android:id="@+id/ibBtnNumbers"
            android:layout_width="177dp"
            android:layout_height="287dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_column="0"
            app:layout_row="11"
            app:srcCompat="@drawable/number" />

        <ImageButton
            android:id="@+id/idBtnXp"
            android:layout_width="179dp"
            android:layout_height="255dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/descXP"
            android:scaleType="fitCenter"
            app:layout_column="6"
            app:layout_row="11"
            app:srcCompat="@drawable/xp" />

    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>